fix: improve drop cap and text alignment

--- a/styles/themes.css
+++ b/styles/themes.css
@@ -78,21 +78,21 @@
     font-family: 'Spectral SC', serif;
     font-size: 3.5em;
     font-weight: bold;
-    line-height: 0.8em;
+    line-height: 1;
     float: left;
-    margin-top: 0.1em;
-    margin-right: 0.05em;
+    margin-right: 0.08em;
+    margin-top: 0.05em;
     color: #58180d;
 }
 
 .markdown-preview p {
-    margin-bottom: 0.3cm;
-    text-align: justify;
-    text-indent: 1em;
+    margin-bottom: 16px;
+    text-align: left;
+    text-indent: 0;
 }
 
 .markdown-preview p + p {
-    text-indent: 1em;
+    text-indent: 0;
 }
 
 .markdown-preview a {
